--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -276,5 +276,9 @@ config FILE_TABLE_DEBUG
 	bool "Enable FILE_TABLE_DEBUG"
 	help
 	  This option enables debug of the open files using a global filetable
+	  
+config ASYNC_FSYNC
+	bool "asynchronous fsync"
+	default y
 
 endmenu
