msm: mdss: kcal: Add KCAL support for post processing control [v2]
Credits to savoca

# Conflicts:
#	drivers/video/msm/mdss/Kconfig

--- a/drivers/video/msm/mdss/Kconfig
+++ b/drivers/video/msm/mdss/Kconfig
@@ -275,8 +275,10 @@ config LGE_EXTERNAL_DISPLAY_BLOCK
 	---help---
 	Support EXTERNAL DISPLAY block
 
-config LGE_DISPLAY_DYN_DSI_MODE_SWITCH
-	bool "LG DYNAMIC DSI MODE SWITCH"
+config FB_MSM_MDSS_KCAL_CTRL
+	depends on FB_MSM_MDSS
+	bool "MDSS color control"
 	default n
 	---help---
-	Support Dynamic DSI mode switch
+	  Enable sysfs for rgb/lut control for mdss-mdp display controllers
+	  in the MDSS sub-system.
