--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -342,3 +342,10 @@ config POWERSUSPEND_DEBUG
 	depends on POWERSUSPEND
 	help
 	  Output debugging info in dmesg
+
+config	BOEFFLA_WL_BLOCKER
+		bool "Boeffla generic wakelock blocker driver"
+		depends on PM
+		default N
+
+
