--- a/arch/arm64/configs/elsa_global_com-vanilla_defconfig
+++ b/arch/arm64/configs/elsa_global_com-vanilla_defconfig
@@ -59,7 +59,9 @@ CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
 CONFIG_SECCOMP=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
+CONFIG_BUILD_ARM64_KERNEL_GZIP=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_PM_AUTOSLEEP=y
