--- a/arch/arm64/configs/elsa_global_h990_defconfig
+++ b/arch/arm64/configs/elsa_global_h990_defconfig
@@ -4900,3 +4900,4 @@ CONFIG_LGE_BLUETOOTH_PM=y
 # CONFIG_FINGERPRINT_BOOST is not set
 CONFIG_ADRENO_IDLER=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_FORCE_FAST_CHARGE=y
