--- a/arch/arm64/configs/elsa_global_h990_defconfig
+++ b/arch/arm64/configs/elsa_global_h990_defconfig
@@ -40,7 +40,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-DirtySanta-h990-1.2"
+CONFIG_LOCALVERSION="-DOTS_H990_kernel-leicxan_jahlex-v1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
