--- a/arch/arm64/configs/elsa_global_h990_defconfig
+++ b/arch/arm64/configs/elsa_global_h990_defconfig
@@ -40,12 +40,11 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-DirtySanta-h990-1.2"
+CONFIG_LOCALVERSION="-NeOcOre-H990-"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
-# CONFIG_SYSVIPC_SYSCTL is not set
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
@@ -131,12 +130,11 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 CONFIG_SCHED_HMP=y
 # CONFIG_SCHED_HMP_CSTATE_AWARE is not set
-CONFIG_SCHED_CORE_CTL=y
 # CONFIG_SCHED_QHMP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
-# CONFIG_IPC_NS is not set
+# CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
@@ -225,6 +223,7 @@ CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
+CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_ARCH_MMAP_RND_BITS=24
 CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
@@ -247,14 +246,6 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
-# CONFIG_MODULE_SIG_FORCE is not set
-# CONFIG_MODULE_SIG_ALL is not set
-# CONFIG_MODULE_SIG_SHA1 is not set
-# CONFIG_MODULE_SIG_SHA224 is not set
-# CONFIG_MODULE_SIG_SHA256 is not set
-# CONFIG_MODULE_SIG_SHA384 is not set
-# CONFIG_MODULE_SIG_SHA512 is not set
-# CONFIG_MODULE_SIG_HASH is not set
 # CONFIG_MODULE_COMPRESS is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
@@ -435,6 +426,7 @@ CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
 # CONFIG_PROCESS_RECLAIM is not set
+CONFIG_LGE_DDR_SECTION_SIZE_CHANGE=y
 CONFIG_READAHEAD_MMAP_SIZE_ENABLE=y
 CONFIG_READAHEAD_MMAP_PAGE_CNT=8
 # CONFIG_LGE_ADAPTIVE_READAHEAD is not set
@@ -451,10 +443,28 @@ CONFIG_SWP_EMULATION=y
 # Boot options
 #
 CONFIG_CMDLINE=""
+CONFIG_CMDLINE_SEARCHREPLACE=y
+CONFIG_CMDLINE_SAR_VERIFY_GREEN=y
+CONFIG_CMDLINE_SAR_ENABLE0=y
+CONFIG_CMDLINE_SAR_SEARCH0=" androidboot.selinux=permissive "
+CONFIG_CMDLINE_SAR_REPLACE0=" "
+CONFIG_CMDLINE_SAR_ENABLE1=y
+CONFIG_CMDLINE_SAR_SEARCH1=" model.name=LG-US996 "
+CONFIG_CMDLINE_SAR_REPLACE1=" "
+CONFIG_CMDLINE_SAR_ENABLE2=y
+CONFIG_CMDLINE_SAR_SEARCH2=" slub_debug=FZPU "
+CONFIG_CMDLINE_SAR_REPLACE2=" "
+CONFIG_CMDLINE_SAR_ENABLE3=y
+CONFIG_CMDLINE_SAR_SEARCH3=" androidboot.serialno=LGUS996"
+CONFIG_CMDLINE_SAR_REPLACE3=" androidboot.serialno=LGH990"
+# CONFIG_CMDLINE_SAR_ENABLE4 is not set
+# CONFIG_CMDLINE_SAR_ENABLE5 is not set
+# CONFIG_CMDLINE_SAR_ENABLE6 is not set
+# CONFIG_CMDLINE_SAR_ENABLE7 is not set
+# CONFIG_CMDLINE_SAR_ENABLE8 is not set
+# CONFIG_CMDLINE_SAR_ENABLE9 is not set
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
-CONFIG_BUILD_ARM64_KERNEL_GZIP=y
-# CONFIG_BUILD_ARM64_KERNEL_LZ4 is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 CONFIG_DMI=y
@@ -480,6 +490,7 @@ CONFIG_WAKELOCK=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
+CONFIG_PM_SUSPEND_BG_SYNC=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
@@ -599,8 +610,8 @@ CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=m
-CONFIG_TCP_CONG_HTCP=m
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
@@ -610,10 +621,16 @@ CONFIG_TCP_CONG_HTCP=m
 # CONFIG_TCP_CONG_YEAH is not set
 # CONFIG_TCP_CONG_ILLINOIS is not set
 # CONFIG_TCP_CONG_DCTCP is not set
+# CONFIG_TCP_CONG_LIA is not set
+# CONFIG_TCP_CONG_OLIA is not set
+# CONFIG_TCP_CONG_WVEGAS is not set
+# CONFIG_TCP_CONG_BALIA is not set
 # CONFIG_DEFAULT_BIC is not set
-CONFIG_DEFAULT_CUBIC=y
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 # CONFIG_LGP_DATA_TCPIP_TCP_SYN_RETRY_CONFIG_UPLUS is not set
 CONFIG_IPV6=y
@@ -639,10 +656,9 @@ CONFIG_IPV6_NDISC_NODETYPE=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 # CONFIG_IPV6_MROUTE is not set
-CONFIG_LGP_DATA_IMPROVE_QCT_EPDG_CONNECTION_TIME=y
 CONFIG_LGP_DATA_TCPIP_SLAAC_IPV6_ALLOCATION_BOOSTER=y
 CONFIG_LGP_DATA_BUGFIX_IPV6_ADDRCONF_KERNEL_CRASH=y
-CONFIG_LGP_DATA_TCPIP_MPTCP=y
+CONFIG_LGP_DATA_IMPROVE_QCT_EPDG_CONNECTION_TIME=y
 # CONFIG_NETLABEL is not set
 CONFIG_MPTCP=y
 CONFIG_MPTCP_PM_ADVANCED=y
@@ -661,6 +677,7 @@ CONFIG_DEFAULT_SCHEDULER=y
 CONFIG_DEFAULT_MPTCP_SCHED="default"
 # CONFIG_LGP_DATA_TCPIP_MPTCP_CHECKSUM_ENABLE is not set
 # CONFIG_LGP_DATA_TCPIP_MPTCP_SYN_RETRY_1 is not set
+CONFIG_LGP_DATA_TCPIP_MPTCP=y
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
 CONFIG_NETWORK_SECMARK=y
@@ -1021,6 +1038,9 @@ CONFIG_SOCKEV_NLMCAST=y
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
 CONFIG_BT=y
+# CONFIG_BT_RFCOMM is not set
+# CONFIG_BT_BNEP is not set
+# CONFIG_BT_HIDP is not set
 
 #
 # Bluetooth device drivers
@@ -1033,7 +1053,9 @@ CONFIG_BT=y
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
+CONFIG_MSM_BT_POWER=m
 # CONFIG_BTFM_SLIM is not set
+CONFIG_LGE_BLUETOOTH_PM=y
 
 #
 # BROADCOM V4L2 BT/FM device drivers
@@ -1074,7 +1096,7 @@ CONFIG_LGE_NFC_PN547_C2=y
 CONFIG_LGE_NFC_SET_IRQ_WAKEUP=y
 # CONFIG_LGE_NFC_DEBUG_MESSAGE is not set
 # CONFIG_LGE_NFC_USE_PMIC is not set
-#CONFIG_NFC_NQ=y
+# CONFIG_NFC_NQ is not set
 # CONFIG_CXD224X_NFC is not set
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
@@ -1203,7 +1225,6 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
-CONFIG_UID_CPUTIME=y
 # CONFIG_BMP085_I2C is not set
 # CONFIG_BMP085_SPI is not set
 # CONFIG_USB_SWITCH_FSA9480 is not set
@@ -1325,6 +1346,7 @@ CONFIG_SCSI_UFS_QCOM_ICE=y
 CONFIG_SCSI_UFS_TEST=m
 CONFIG_UFS_LGE_FEATURE=y
 CONFIG_UFS_LGE_CARD_RESET=y
+# CONFIG_UFS_LGE_CARD_RESET_DEBUGFS is not set
 # CONFIG_SCSI_HPTIOP is not set
 # CONFIG_SCSI_DMX3191D is not set
 # CONFIG_SCSI_FUTURE_DOMAIN is not set
@@ -1681,8 +1703,8 @@ CONFIG_BCMDHD_PREALLOC_PKTIDMAP=y
 # CONFIG_BCMDHD_PREALLOC_MEMDUMP is not set
 # CONFIG_BRCM_WAPI is not set
 CONFIG_BCMDHD_HOSTAPD_BGN_MODE=y
-CONFIG_BCMDHD_FOLLOW_AP_DTIM_PERIOD=y
 CONFIG_DHD_DEBUG_ENABLED=y
+# CONFIG_RUNTIME_TCPACK_SUPPRESS is not set
 # CONFIG_CNSS is not set
 # CONFIG_CLD_DEBUG is not set
 # CONFIG_CLD_HL_SDIO_CORE is not set
@@ -1709,7 +1731,7 @@ CONFIG_INPUT_FF_MEMLESS=y
 #
 # Userland interfaces
 #
-# CONFIG_INPUT_MOUSEDEV is not set
+CONFIG_INPUT_MOUSEDEV=y
 CONFIG_INPUT_MOUSEDEV_PSAUX=y
 CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
@@ -1748,14 +1770,8 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_CAP1106 is not set
 # CONFIG_INPUT_MOUSE is not set
-# CONFIG_MOUSE_PS2 is not set
-# CONFIG_MOUSE_SERIAL is not set
 CONFIG_MOUSE_APPLETOUCH=y
 CONFIG_MOUSE_BCM5974=y
-# CONFIG_MOUSE_CYAPA is not set
-# CONFIG_MOUSE_VSXXXAA is not set
-# CONFIG_MOUSE_GPIO is not set
-# CONFIG_MOUSE_SYNAPTICS_I2C is not set
 CONFIG_MOUSE_SYNAPTICS_USB=y
 CONFIG_INPUT_JOYSTICK=y
 # CONFIG_JOYSTICK_ANALOG is not set
@@ -2249,6 +2265,7 @@ CONFIG_LGE_PM_FACTORY_CABLE=y
 CONFIG_LGE_PM_PARALLEL_CHARGING=y
 # CONFIG_LGE_PM_BATTERY_ID_CHECKER is not set
 CONFIG_LGE_PM_FACTORY_TESTMODE=y
+# CONFIG_LGE_PM_FG_ACFA is not set
 CONFIG_LGE_PM_MAXIM_EVP_CONTROL=y
 CONFIG_LGE_PM_USB_CURRENT_MAX_MODE=y
 # CONFIG_LGE_PM_RESTORE_BATT_INFO is not set
@@ -2256,12 +2273,15 @@ CONFIG_LGE_PM_SOC_SCALING=y
 CONFIG_LGE_PM_SOC_RECHARGING_WA=y
 # CONFIG_LGE_PM_VZW_REQ is not set
 CONFIG_LGE_PM_CHARGERLOGO_WAIT_FOR_FG_INIT=y
+CONFIG_LGE_PM_LLK_MODE=y
 CONFIG_LGE_PM_WAKE_LOCK_FOR_CHG_LOGO=y
 # CONFIG_LGE_PM_BATT_MANAGER is not set
 # CONFIG_LGE_PM_WEAK_BATT_PACK is not set
+# CONFIG_LGE_APPS_PORT_FRIENDS is not set
 # CONFIG_LGE_APPS_PORT_FRIENDS_ONE_WIRE is not set
 # CONFIG_LGE_PM_BATTERY_SWAP is not set
-# CONFIG_LGE_PM_SUPPORT_LG_POWER_CLASS is not set
+CONFIG_LGE_PM_SUPPORT_LG_POWER_CLASS=y
+# CONFIG_LGE_PM_STEP_DECREASING_TAPER_CHARGING is not set
 # CONFIG_LGE_PM_OTP_SCENARIO_FOR_VZW is not set
 # CONFIG_LGE_PM_OTP_SCENARIO_FOR_SPRINT is not set
 CONFIG_POWER_RESET=y
@@ -2693,7 +2713,6 @@ CONFIG_MSM_CAMERA=y
 CONFIG_MSMB_CAMERA=y
 # CONFIG_MSMB_CAMERA_DEBUG is not set
 CONFIG_MSM_CAMERA_SENSOR=y
-# CONFIG_LG_TCS is not set
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
 CONFIG_MSM_CSI20_HEADER=y
@@ -2724,9 +2743,9 @@ CONFIG_MSM_JPEGDMA=y
 CONFIG_LGE_CAMERA_DRIVER=y
 # CONFIG_LG_TCS is not set
 # CONFIG_LGE_EEPROM is not set
-CONFIG_LC898123F40=y
 CONFIG_LG_OIS=y
 CONFIG_LG_PROXY=y
+CONFIG_LC898123F40=y
 # CONFIG_TSPP is not set
 # CONFIG_MSM_SDE_ROTATOR is not set
 
@@ -2922,7 +2941,7 @@ CONFIG_FB_MSM=y
 # CONFIG_FB_SIMPLE is not set
 # CONFIG_MSM_BA_V4L2 is not set
 # CONFIG_MSM_DBA is not set
-# CONFIG_FB_MSM_MDSS_COMMON is not set
+CONFIG_FB_MSM_MDSS_COMMON=y
 # CONFIG_FB_MSM_MDP is not set
 CONFIG_FB_MSM_MDSS=y
 # CONFIG_FB_MSM_MDP_NONE is not set
@@ -2930,7 +2949,6 @@ CONFIG_FB_MSM_MDSS=y
 # CONFIG_FB_MSM_QPIC_PANEL_DETECT is not set
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
-CONFIG_LGE_DP_ANX7688=y
 # CONFIG_FB_MSM_MDSS_HDMI_MHL_SII8334 is not set
 # CONFIG_FB_MSM_MDSS_MHL3 is not set
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
@@ -2952,6 +2970,7 @@ CONFIG_LGE_PP_AD_SUPPORTED=y
 CONFIG_LGE_ENHANCE_GALLERY_SHARPNESS=y
 CONFIG_LGE_VSYNC_SKIP=y
 CONFIG_LGE_LCD_POWER_CTRL=y
+CONFIG_LGE_PANEL_RECOVERY=y
 # CONFIG_LGE_THERMAL_BL_MAX is not set
 CONFIG_LGE_LCD_MFTS_MODE=y
 CONFIG_LGE_CAM_PREVIEW_TUNE=y
@@ -2962,12 +2981,13 @@ CONFIG_LGE_DISPLAY_OVERRIDE_MDSS_DSI_PANEL_POWER_ON=y
 CONFIG_LGE_DISPLAY_OVERRIDE_MDSS_DSI_PANEL_POWER_OFF=y
 CONFIG_LGE_DISPLAY_OVERRIDE_MDSS_DSI_PANEL_ON=y
 CONFIG_LGE_DISPLAY_OVERRIDE_MDSS_DSI_PANEL_OFF=y
-CONFIG_LGE_DISPLAY_OVERRIDE_MDSS_DSI_CTRL_SHUTDOWN=y
 CONFIG_LGE_DISPLAY_OVERRIDE_MDSS_DSI_PANEL_RESET=y
+CONFIG_LGE_DISPLAY_OVERRIDE_MDSS_DSI_CTRL_SHUTDOWN=y
 # CONFIG_LGE_DISPLAY_H1_COMMON is not set
 CONFIG_LGE_DISPLAY_HPLUS_COMMON=y
 CONFIG_LGE_DISPLAY_BL_EXTENDED=y
 # CONFIG_LGE_EXTERNAL_DISPLAY_BLOCK is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=m
@@ -3004,7 +3024,6 @@ CONFIG_SLIMPORT_DYNAMIC_HPD=y
 # CONFIG_SLIMPORT_4K_IMPROVEMENT is not set
 # CONFIG_SLIMPORT_CTYPE is not set
 # CONFIG_SLIMPORT_COMMON is not set
-CONFIG_SLIMPORT_CONSTRAINT_4K_30FPS=y
 # CONFIG_VGASTATE is not set
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
@@ -3519,7 +3538,9 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 # CONFIG_USB_LINK_LAYER_TEST is not set
 # CONFIG_LGE_USB_ANX7418 is not set
 CONFIG_LGE_USB_ANX7688=y
+CONFIG_LGE_DP_ANX7688=y
 CONFIG_LGE_USB_ANX7688_OVP=y
+# CONFIG_LGE_USB_ANX7688_ADC is not set
 
 #
 # USB Physical Layer drivers
@@ -3657,7 +3678,6 @@ CONFIG_MMC_SDHCI_MSM_ICE=y
 # CONFIG_MMC_VUB300 is not set
 # CONFIG_MMC_USHC is not set
 # CONFIG_MMC_USDHI6ROL0 is not set
-CONFIG_MMC_FFU=n
 CONFIG_MMC_CQ_HCI=y
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
@@ -3944,6 +3964,9 @@ CONFIG_MSM_SPMI=y
 CONFIG_MSM_SPMI_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
 CONFIG_LGE_QPNP_HAPTIC_OV_RB=y
+CONFIG_DIRTYSANTA_FIXUP=y
+CONFIG_DIRTYSANTA_FIXUP_DEVICENAME=""
+CONFIG_DIRTYSANTA_FIXUP_SIMCOUNT=0
 
 #
 # SOC (System On Chip) specific Drivers
@@ -3977,6 +4000,7 @@ CONFIG_MSM_CPU_PWR_CTL=y
 CONFIG_MSM_CACHE_M4M_ERP64=y
 # CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_CE is not set
 CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_UE=y
+# CONFIG_MSM_L2_IA_DEBUG is not set
 CONFIG_MSM_RPM_SMD=y
 # CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
 CONFIG_MSM_RPM_LOG=y
@@ -4064,6 +4088,26 @@ CONFIG_LGE_PANEL_MAKER_ID_SUPPORT=y
 #
 CONFIG_LGE_QFPROM_INTERFACE=y
 CONFIG_LGE_QFPROM_SECHASH="2e1d68a19e9a833d84286fd7aa353d65d793c94ecf5e09623c95be41558f320c"
+CONFIG_LGE_PM_LGE_POWER_CORE=y
+# CONFIG_LGE_PM_CHARGING_SCENARIO_DRIVER is not set
+# CONFIG_LGE_PM_BATTERY_DRIVER is not set
+CONFIG_LGE_PM_LGE_POWER_CLASS_CABLE_DETECT=y
+CONFIG_LGE_PM_LGE_POWER_CLASS_ADC_QCT=y
+# CONFIG_LGE_PM_ADC_MTK is not set
+# CONFIG_LGE_PM_ADC_INTEL is not set
+# CONFIG_LGE_PM_CHARGING_LPC_BQ24296 is not set
+CONFIG_LGE_PM_LGE_POWER_CLASS_CHARGING_CONTROLLER=y
+CONFIG_LGE_PM_LGE_POWER_CLASS_BATTERY_ID_CHECKER=y
+# CONFIG_LGE_PM_LGE_POWER_CLASS_DOCK is not set
+CONFIG_LGE_PM_LGE_POWER_CLASS_UEVENT=y
+# CONFIG_LGE_PM_LGE_POWER_CLASS_VZW_REQ is not set
+CONFIG_LGE_PM_LGE_POWER_CLASS_STORE_MODE=y
+# CONFIG_LGE_PM_ONLY_STORE_MODE is not set
+# CONFIG_LGE_PM_LGE_POWER_CLASS_CHARGER_PSY is not set
+CONFIG_LGE_PM_LGE_POWER_CLASS_BOARD_REVISION=y
+CONFIG_LGE_PM_LGE_POWER_CLASS_TYPE_HVDCP=y
+# CONFIG_LGE_PM_LGE_POWER_CLASS_CHARGER_SLEEP is not set
+# CONFIG_LGE_PM_LGE_POWER_CLASS_TDMB_MODE is not set
 # CONFIG_LGE_PM_EMBEDDED_BATTERY is not set
 CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_ICNSS is not set
@@ -4162,6 +4206,7 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
+CONFIG_ADRENO_IDLER=y
 
 #
 # DEVFREQ Drivers
@@ -4295,7 +4340,7 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
-CONFIG_EXFAT_VIRTUAL_XATTR=y
+# CONFIG_EXFAT_VIRTUAL_XATTR is not set
 CONFIG_EXFAT_COMPAT_TUXERA=y
 CONFIG_EXFAT_COMPAT_UFSD=y
 # CONFIG_EXFAT_DEBUG is not set
@@ -4634,7 +4679,6 @@ CONFIG_INTEGRITY_AUDIT=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
-CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO=y
 
 #
@@ -4843,55 +4887,3 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-# CONFIG_LGE_PM_CHARGING_CONTROLLER is not set by replaced CONFIG_LGE_PM_LGE_POWER_CLASS_CHARGING_CONTROLLER
-# LG POWER CLASS
-CONFIG_LGE_PM_SUPPORT_LG_POWER_CLASS=y
-CONFIG_LGE_PM_LGE_POWER_CORE=y
-CONFIG_LGE_PM_LGE_POWER_CLASS_ADC_QCT=y
-CONFIG_LGE_PM_LGE_POWER_CLASS_CABLE_DETECT=y
-CONFIG_LGE_PM_LGE_POWER_CLASS_CHARGING_CONTROLLER=y
-CONFIG_LGE_PM_LGE_POWER_CLASS_BATTERY_ID_CHECKER=y
-CONFIG_LGE_PM_LGE_POWER_CLASS_BOARD_REVISION=y
-CONFIG_LGE_PM_LGE_POWER_CLASS_UEVENT=y
-CONFIG_LGE_PM_LGE_POWER_CLASS_TYPE_HVDCP=y
-CONFIG_LGE_PM_LGE_POWER_CLASS_STORE_MODE=y
-# CONFIG_LGE_PM_LGE_POWER_CLASS_VZW_REQ is not set
-CONFIG_LGE_PM_LLK_MODE=y
-# CONFIG_LGE_PM_STEP_DECREASING_TAPER_CHARGING is not set
-# CONFIG_LGE_PM_LGE_POWER_CLASS_CHARGER_SLEEP is not set
-# CONFIG_LGE_APPS_PORT_FRIENDS is not set
-#########################################################################
-# Added									#
-#########################################################################
-# Command-line fixes (for unlocked debugging bootloader)
-CONFIG_CMDLINE_SEARCHREPLACE=y
-CONFIG_CMDLINE_SAR_VERIFY_GREEN=y
-CONFIG_CMDLINE_SAR_ENABLE0=y
-CONFIG_CMDLINE_SAR_SEARCH0=" androidboot.selinux=permissive "
-CONFIG_CMDLINE_SAR_REPLACE0=" "
-CONFIG_CMDLINE_SAR_ENABLE1=y
-CONFIG_CMDLINE_SAR_SEARCH1=" model.name=LG-US996 "
-CONFIG_CMDLINE_SAR_REPLACE1=" "
-CONFIG_CMDLINE_SAR_ENABLE2=y
-CONFIG_CMDLINE_SAR_SEARCH2=" slub_debug=FZPU "
-CONFIG_CMDLINE_SAR_REPLACE2=" "
-CONFIG_CMDLINE_SAR_ENABLE3=y
-CONFIG_CMDLINE_SAR_SEARCH3=" androidboot.serialno=LGUS996"
-CONFIG_CMDLINE_SAR_REPLACE3=" androidboot.serialno=LGH990"
-#
-# Fix the modem memory (for unlocked debugging bootloader)
-CONFIG_DIRTYSANTA_FIXUP=y
-#
-#[H1_BT_BRINGUP_S]
-CONFIG_LGE_BLUETOOTH_PM=y
-#CONFIG_MSM8996_BT_RFKILL=y
-#CONFIG_BT_RFCOMM=y
-#CONFIG_BT_RFCOMM_TTY=y
-#CONFIG_BT_BNEP=y
-#CONFIG_BT_BNEP_MC_FILTER=y
-#CONFIG_BT_BNEP_PROTO_FILTER=y
-#CONFIG_BT_HIDP=y
-#CONFIG_MSM_BT_POWER=y
-#[H1_BT_BRINGUP_E]
-CONFIG_ADRENO_IDLER=y
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
