update config, tweak cpu boost

--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -547,7 +547,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPUFREQ_DT is not set
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST= is not set
 # CONFIG_LGE_PM_TRITON is not set
 CONFIG_LGE_PM_CANCUN=y
 # CONFIG_FINGERPRINT_BOOST is not set
