re-enable cpu boost

--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -40,7 +40,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="NeOcOrE-rc-1"
+CONFIG_LOCALVERSION="NeOcOrE"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -547,7 +547,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPUFREQ_DT is not set
-# CONFIG_CPU_BOOST= is not set
+CONFIG_CPU_BOOST=y
 # CONFIG_LGE_PM_TRITON is not set
 CONFIG_LGE_PM_CANCUN=y
 # CONFIG_FINGERPRINT_BOOST is not set
