--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.53 Kernel Configuration
+# Linux/arm64 3.18.90 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -40,7 +40,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="-NeOcOrE-PaRaDoX"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -107,9 +107,8 @@ CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
 # CONFIG_RCU_NOCB_CPU is not set
-CONFIG_BUILD_BIN2C=y
-CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
+# CONFIG_BUILD_BIN2C is not set
+# CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=19
 # CONFIG_CONSOLE_FLUSH_ON_HOTPLUG is not set
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=15
@@ -283,13 +282,15 @@ CONFIG_BLOCK_COMPAT=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=m
-CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_CFQ=y
+# CONFIG_IOSCHED_TEST is not set
+# CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_IOSCHED_ROW=y
+# CONFIG_IOSCHED_CFQ is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_ROW=y
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="row"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -407,7 +408,8 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
+CONFIG_UKSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
@@ -525,7 +527,6 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 # CPU Frequency scaling
 #
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
@@ -538,9 +539,9 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_BOOST=y
 CONFIG_LGE_PM_TRITON=y
@@ -623,10 +624,8 @@ CONFIG_TCP_CONG_WESTWOOD=y
 # CONFIG_TCP_CONG_OLIA is not set
 # CONFIG_TCP_CONG_WVEGAS is not set
 # CONFIG_TCP_CONG_BALIA is not set
-# CONFIG_DEFAULT_BIC is not set
-# CONFIG_DEFAULT_CUBIC is not set
-# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 # CONFIG_LGP_DATA_TCPIP_TCP_SYN_RETRY_CONFIG_UPLUS is not set
@@ -1339,7 +1338,6 @@ CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_QCOM=y
 CONFIG_SCSI_UFS_QCOM_ICE=y
-CONFIG_SCSI_UFS_TEST=m
 CONFIG_UFS_LGE_FEATURE=y
 CONFIG_UFS_LGE_CARD_RESET=y
 # CONFIG_UFS_LGE_CARD_RESET_DEBUGFS is not set
@@ -2984,7 +2982,6 @@ CONFIG_LGE_DISPLAY_HPLUS_COMMON=y
 CONFIG_LGE_DISPLAY_BL_EXTENDED=y
 # CONFIG_LGE_EXTERNAL_DISPLAY_BLOCK is not set
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
-# CONFIG_LGE_DISPLAY_DYN_DSI_MODE_SWITCH is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=m
@@ -3652,7 +3649,6 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 CONFIG_MMC_TEST=m
-CONFIG_MMC_BLOCK_TEST=m
 # CONFIG_MMC_FFU is not set
 CONFIG_MMC_LGE_UTILS=y
 
@@ -4118,6 +4114,8 @@ CONFIG_MSM_SERVICE_NOTIFIER=y
 CONFIG_MSM_PACMAN=y
 # CONFIG_MSM_KERNEL_PROTECT is not set
 # CONFIG_MSM_REMOTEQDSS is not set
+CONFIG_ASMP=y
+CONFIG_STATE_NOTIFIER=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
 CONFIG_CLKDEV_LOOKUP=y
@@ -4455,6 +4453,8 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_FILE_TABLE_DEBUG is not set
+CONFIG_ASYNC_FSYNC=y
+CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_VIRTUALIZATION is not set
 
 #
@@ -4639,6 +4639,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # Security options
 #
 CONFIG_KEYS=y
+CONFIG_KEYS_COMPAT=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
 CONFIG_ENCRYPTED_KEYS=y
