--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -548,8 +548,8 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_BOOST=y
-CONFIG_LGE_PM_TRITON=y
-CONFIG_LGE_PM_CANCUN=y
+# CONFIG_LGE_PM_TRITON is not set
+# CONFIG_LGE_PM_CANCUN is not set
 
 #
 # ARM CPU frequency scaling drivers
@@ -686,7 +686,7 @@ CONFIG_NETWORK_SECMARK=y
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_DEBUG is not set
 CONFIG_NETFILTER_ADVANCED=y
-CONFIG_BRIDGE_NETFILTER=m
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
@@ -1735,7 +1735,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 CONFIG_INPUT_JOYDEV=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+CONFIG_INPUT_EVBUG=y
 CONFIG_INPUT_KEYRESET=y
 CONFIG_INPUT_KEYCOMBO=y
 
@@ -2003,7 +2003,7 @@ CONFIG_DEVPORT=y
 CONFIG_MSM_SMD_PKT=y
 # CONFIG_XILLYBUS is not set
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+CONFIG_MSM_RDBG=y
 
 #
 # I2C support
@@ -2109,7 +2109,7 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPMI is not set
 # CONFIG_HSI is not set
@@ -2632,7 +2632,7 @@ CONFIG_MEDIA_USB_SUPPORT=y
 #
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
-CONFIG_USB_GSPCA=m
+CONFIG_USB_GSPCA=y
 # CONFIG_USB_M5602 is not set
 # CONFIG_USB_STV06XX is not set
 # CONFIG_USB_GL860 is not set
@@ -2988,7 +2988,7 @@ CONFIG_LGE_DISPLAY_BL_EXTENDED=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
-CONFIG_LCD_CLASS_DEVICE=m
+CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
 # CONFIG_LCD_LMS283GF05 is not set
 # CONFIG_LCD_LTV350QV is not set
@@ -3652,7 +3652,7 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=m
+# CONFIG_MMC_TEST is not set
 # CONFIG_MMC_FFU is not set
 CONFIG_MMC_LGE_UTILS=y
 
@@ -4789,7 +4789,7 @@ CONFIG_CRYPTO_DEFLATE=y
 #
 # Random Number Generation
 #
-CONFIG_CRYPTO_ANSI_CPRNG=m
+CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_DRBG_MENU is not set
 CONFIG_CRYPTO_DRBG_HMAC=y
 # CONFIG_CRYPTO_DRBG_HASH is not set
