--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -40,7 +40,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-NeOcOrE-PaRaDoX-rev-1"
+CONFIG_LOCALVERSION="-NeOcOrE-PaRaDoX-rev-2"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -4342,7 +4342,9 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_EXFAT_COMPAT_UFSD is not set
 # CONFIG_EXFAT_DEBUG is not set
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
@@ -4896,3 +4898,7 @@ CONFIG_DRIVEDROID_CDROM=y
 
 #Adreno Idler
 CONFIG_ADRENO_IDLER=y
+CONFIG_FORCE_FAST_CHARGE=y
+
+#GOVS
+CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
