--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -4902,6 +4902,7 @@ CONFIG_FORCE_FAST_CHARGE=y
 
 #GOVS
 CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
 
 #WireGuard
 CONFIG_WIREGUARD=y
