--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.90 Kernel Configuration
+# Linux/arm64 3.18.91 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -40,7 +40,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-NeOcOrE-PaRaDoX-rev-2"
+CONFIG_LOCALVERSION="-NeOcOrE-PaRaDoX-rev-3"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -4902,6 +4902,7 @@ CONFIG_FORCE_FAST_CHARGE=y
 
 #GOVS
 CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
 
 #WireGuard
 CONFIG_WIREGUARD=y
