--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -175,13 +175,13 @@ CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_PCI_QUIRKS=y
 CONFIG_EMBEDDED=y
-CONFIG_HAVE_PERF_EVENTS=y
-CONFIG_PERF_USE_VMALLOC=y
+# CONFIG_HAVE_PERF_EVENTS is not set
+# CONFIG_PERF_USE_VMALLOC is not set
 
 #
 # Kernel Performance Events And Counters
 #
-CONFIG_PERF_EVENTS=y
+# CONFIG_PERF_EVENTS is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
@@ -203,8 +203,8 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
-CONFIG_HAVE_PERF_REGS=y
-CONFIG_HAVE_PERF_USER_STACK_DUMP=y
+# CONFIG_HAVE_PERF_REGS is not set
+# CONFIG_HAVE_PERF_USER_STACK_DUMP is not set
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_HAVE_RCU_TABLE_FREE=y
 CONFIG_HAVE_ALIGNED_STRUCT_PAGE=y
@@ -386,7 +386,7 @@ CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
 CONFIG_ARCH_SELECT_MEMORY_MODEL=y
 CONFIG_HAVE_ARCH_PFN_VALID=y
-CONFIG_HW_PERF_EVENTS=y
+# CONFIG_HW_PERF_EVENTS is not set
 # CONFIG_PERF_EVENTS_USERMODE is not set
 # CONFIG_PERF_EVENTS_RESET_PMU_DEBUGFS is not set
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
@@ -503,7 +503,7 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -4198,13 +4198,13 @@ CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
-CONFIG_ARM_MEMLAT_MON=y
+# CONFIG_ARM_MEMLAT_MON is not set
 CONFIG_MSMCCI_HWMON=y
 CONFIG_MSM_M4M_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
-CONFIG_DEVFREQ_GOV_MEMLAT=y
+# CONFIG_DEVFREQ_GOV_MEMLAT is not set
 
 #
 # DEVFREQ Drivers
@@ -4656,7 +4656,7 @@ CONFIG_ENCRYPTED_KEYS=y
 #
 # CONFIG_PFK is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
-CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
+# CONFIG_SECURITY_PERF_EVENTS_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
