--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -4908,3 +4908,7 @@ CONFIG_WIREGUARD=y
 
 #Boeffla wakelock blocker
 CONFIG_BOEFFLA_WL_BLOCKER=y
+
+#IOschedulers
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
