--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -4910,3 +4910,6 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 #IOschedulers
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
+
+#USB Fast Charge
+CONFIG_FORCE_FAST_CHARGE=y
