--- a/arch/arm64/configs/h990_neo_defconfig
+++ b/arch/arm64/configs/h990_neo_defconfig
@@ -4913,3 +4913,7 @@ CONFIG_IOSCHED_SIO=y
 
 #USB Fast Charge
 CONFIG_FORCE_FAST_CHARGE=y
+
+#Others
+CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_CRYPTO_SHA256_ARM=y
